add Interactive nav

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <header>
+    <header id="portfolio">
 
         <h1><img src="../1/assets/images/Logo@1X.png" alt="Hexal"></h1>
         
         <nav class="navigation">
-            <div class="menu-1 menu"><a id="PORTFOLIO" class="menu-item" href="">PORTFOLIO</a> · <a  class="menu-item" href="#">ABOUT</a>
+            <div class="menu-1 menu"><a id="PORTFOLIO" class="menu-item" href="#portfolio">PORTFOLIO</a> · <a  class="menu-item" href="#info-section">ABOUT</a>
             </div>
             <div class="menu-2 menu">
-                <a class="menu-item" href="#hexagon-section">BLOG</a> · <a id="GET_IN_TOUCH" class="menu-item" href="#">GET IN TOUCH</a>
+                <a class="menu-item" href="#hexagon-section">BLOG</a> · <a id="GET_IN_TOUCH" class="menu-item" href="#get-in-touch-section">GET IN TOUCH</a>
         </div>
         </nav>
     </header>
@@ -53,7 +53,7 @@
                     <div class="hexagon"><div class="hexagon-inside"><div class="hexagon-image hexagon-image-4"></div></div></div>      
             </div>
         </section>
-        <section class="info-section">
+        <section id="info-section" class="info-section">
                 <div class="lines-info">
                     <div class="line line-8"></div> 
                     <div class="line line-9"></div>   
@@ -79,11 +79,11 @@
         </section>
     </main>
     <footer>
-        <div class="lines-get-in-touch">
+        <div  class="lines-get-in-touch">
             <div class="line line-10"></div>
             <div class="line line-11"></div>
         </div>
-        <div class="get-in-touch">
+        <div id ="get-in-touch-section" class="get-in-touch">
         <form action="">
             <div class="title">Get In Touch</div>     
             <div class="hint">In order to get in touch use the contact form below:</div>
